--- a/assets/css/checkout.css
+++ b/assets/css/checkout.css
@@ -14,6 +14,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+  font-family: "Poppins", sans-serif;
 	padding: 0.7rem 1rem;
 	background-color: var(--yellow);
 	border-radius: 0.5rem;
