--- a/assets/css/edit.css
+++ b/assets/css/edit.css
@@ -34,7 +34,7 @@
 
 .edit-brg form {
 	display: grid;
-	grid-template-rows: 5, 1fr;
+	grid-template-rows: repeat(5, 1fr);
 	width: 100%;
 	gap: 1rem;
 }
