--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -122,19 +122,65 @@ main .main-bottom .nickname .name .longname p {
   font-size: 1rem;
 }
 
-#cta {
-  margin-top: 1rem;
-  display: inline-block;
-  padding: 0.75rem 2rem;
-  font-size: 1rem;
-  font-weight: 400;
-  color: var(--color-white);
-  background: var(--color-primary);
-  border-radius: 5rem;
+main .main-bottom .nickname .name .button {
+  display: grid;
+  grid-template-columns: repeat(2, max-content);
+  gap: 1rem;
 }
 
-#cta:hover {
+#cta-profile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+  padding: 0.75rem 2rem;
+  font-size: 1rem;
+  font-weight: 500;
+  color: var(--color-white);
+  background: var(--color-primary);
+  border-radius: 1rem;
+}
+
+#cta-profile:hover {
   color: var(--color-primary);
   background: var(--color-white);
-  border: 1px solid var(--color-primary);
+  border: 2px solid var(--color-primary);
+}
+
+#cta-edit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+  padding: 0.75rem 2rem;
+  font-size: 1rem;
+  font-weight: 500;
+  color: var(--color-primary);
+  background: var(--color-white);
+  border: 2px solid var(--color-primary);
+  border-radius: 1rem;
+}
+
+#cta-edit:hover {
+  color: var(--color-white);
+  background: var(--color-primary);
+}
+
+#cta-editprofile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+  padding: 0.75rem 2rem;
+  font-size: 1rem;
+  font-weight: 500;
+  color: var(--color-white);
+  background: var(--color-primary);
+  border-radius: 1rem;
+}
+
+#cta-editprofile:hover {
+  color: var(--color-primary);
+  background: var(--color-white);
+  border: 2px solid var(--color-primary);
 }
