--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -10,8 +10,8 @@
 	--black: #000;
 	--shadow: rgba(132, 139, 200, 0.18);
 	--box-shadow: 0 2rem 3rem var(--shadow);
-	--failed-validation: #ff7782;
-	--success-validation: #41f1b6;
+	--failed-validation: #f87171;
+	--success-validation: #4ade80;
 }
 
 * {
