--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -49,47 +49,6 @@ body {
 	border-radius: 0.6rem;
 }
 
-/* Container
-.container {
-  display: grid;
-  grid-template-columns: 14rem auto;
-  grid-template-rows: 3rem auto;
-  grid-template-areas:
-    "navbar navbar"
-    "sidebar content"
-    "sidebar content";
-  height: 100vh;
-}
-
-/* Navbar */
-/* .navbar {
-  grid-area: navbar;
-  background-color: antiquewhite;
-  display: grid;
-  grid-template-columns: 14rem auto max-content;
-}
-
-.navbar .ul-nav {
-  display: flex;
-  align-items: center;
-  gap: 3rem;
-}
-
-.navbar .ul-nav li a {
-  color: black;
-}
-
-
-.sidebar {
-  grid-area: sidebar;
-  background-color: aqua;
-}
-
-.content {
-  grid-area: content;
-  background-color: greenyellow;
-} */
-
 /* Sidebar Aside */
 .sidebar {
 	display: grid;
@@ -197,6 +156,12 @@ body {
 	font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
+.navbar .navbar-nav .profil .icon a {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .navbar .navbar-nav .profil .icon .numb {
 	display: flex;
 	justify-content: center;
@@ -213,22 +178,17 @@ body {
 	border-radius: 50%;
 }
 
-/* .navbar .navbar-nav .profil a span {
-  height: 100%;
-  font-variation-settings:
-  'FILL' 1,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24;
-  color: var(--black);
-} */
-
-
 /* Tambahkan sedikit gaya CSS untuk membuat dropdown terlihat lebih baik */
 .dropdown {
   position: relative;
   display: inline-block;
   border-radius: 1rem;
+}
+
+.dropdown .img {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .dropdown .img img {
@@ -275,6 +235,100 @@ body {
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+.modal-logout-user {
+	display: none;
+	position: fixed;
+	z-index: 999999;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+
+.logout-container {
+	display: block;
+	position: relative;
+	background-color: var(--white);
+	margin: 4% auto;
+	color: var(--black);
+	padding: 3rem;
+	height: 16rem;
+	border-radius: 1rem;
+	animation: animateModal 0.5s;
+}
+
+/* Modal Animation */
+@keyframes animateModal {
+	from {
+		top: -300px;
+		opacity: 0;
+	}
+
+	to {
+		top: 0;
+		opacity: 1;
+	}
+}
+
+.logout-container .close-icon {
+	position: absolute;
+	right: 1rem;
+	top: 1rem;
+	color: var(--gray);
+	transform: scale(0.9);
+}
+
+.logout-container .close-icon:hover {
+	color: #aeaeae;
+}
+
+.logout-container h5 {
+	font-size: 1.5rem;
+	font-weight: 500;
+	margin-bottom: 0.8rem;
+}
+
+.logout-container p {
+	font-size: 1rem;
+	font-weight: 500;
+	margin-bottom: 3rem;
+}
+
+.logout-container .btn {
+	display: flex;
+	justify-content: end;
+	text-align: center;
+}
+
+.logout-container .btn .cancel {
+	font-family: "Poppins", sans-serif;
+	padding: 0.5rem 1rem;
+	font-size: 1rem;
+	border-radius: 0.5rem;
+	background-color: var(--gray);
+	color: var(--white);
+}
+
+.logout-container .btn .cancel:hover {
+	background-color: #aeaeae;
+}
+
+.logout-container .btn .logout {
+	font-family: "Poppins", sans-serif;
+	padding: 0.5rem 1rem;
+	font-size: 1rem;
+	border-radius: 0.5rem;
+	background-color: #ffcc00;
+	color: var(--white);
+	margin-left: 1rem;
+}
+
+.logout-container .btn .logout:hover {
+	background-color: #f0c000;
 }
 
 /* Main Content */
