--- a/assets/css/detail_product.css
+++ b/assets/css/detail_product.css
@@ -9,7 +9,7 @@
 	--shadow: rgba(132, 139, 200, 0.18);
 	--box-shadow: 0 2rem 3rem var(--shadow);
 	--failed-validation: #ff7782;
-	--success-validation: #41f1b6;
+	--success-validation: #4ade80;
 }
 
 /* Modal Box */
