--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -10,7 +10,7 @@
 	--shadow: rgba(132, 139, 200, 0.18);
 	--box-shadow: 0 2rem 3rem var(--shadow);
 	--failed-validation: #ff7782;
-	--success-validation: #41f1b6;
+	--success-validation: #4ade80;
 }
 
 .profile {
@@ -52,9 +52,26 @@
 	width: 100%;
 }
 
-.profile .myprofile .image-profile img {
-  width: 3rem;
-	height: 3rem;
+.profile .myprofile .image-profile .image-upload {
+	display: flex;
+	position: relative;
+}
+
+.profile .myprofile .image-profile .image-upload img {
+  width: 5rem;
+	height: 5rem;
+	background-repeat: no-repeat;
+	object-fit: cover;
+}
+
+.profile .myprofile .image-profile .image-upload #edit_square {
+	position: absolute;
+	top: 0;
+	right: 0;
+	color: var(--black);
+	padding: 0.1rem;
+	font-size: 1.3rem;
+	cursor: pointer;
 }
 
 .profile .myprofile label {
@@ -75,7 +92,7 @@
 
 .profile .myprofile .input-profile {
   display: grid;
-	grid-template-rows: repeat(3, 1fr);
+	grid-template-rows: repeat(4, max-content);
 	gap: 0.5rem;
 }
 
