--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -12,7 +12,7 @@
 	--shadow: rgba(132, 139, 200, 0.18);
 	--box-shadow: 0 2rem 3rem var(--shadow);
 	--failed-validation: #ff7782;
-	--success-validation: #41f1b6;
+	--success-validation: #4ade80;
 }
 
 * {
@@ -33,6 +33,17 @@ body {
 	font-family: "Poppins", sans-serif;
 	background-color: var(--white);
 	color: var(--black);
+}
+
+.activation-success {
+	padding: 0.8rem 1rem;
+	background: var(--success-validation);
+	color: var(--white);
+	border-radius: 0.5rem;
+	font-weight: 400;
+	font-size: 0.8rem;
+	text-align: justify;
+	margin-bottom: 1rem;
 }
 
 .validation-failed {
