CRUD Folder flavia-food

--- a/assets/css/barang.css
+++ b/assets/css/barang.css
@@ -245,6 +245,7 @@ main .main-left .left .date {
 	border-radius: var(--border-radius-1);
 	margin-top: 1rem;
 	padding: 0.5rem 1.6rem;
+	width: 13rem;
 }
 
 main .main-left .left .date p {
