--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -167,6 +167,10 @@ body {
 	color: var(--yellow);
 }
 
+.login-page .login .forgot:hover {
+	color: var(--black);
+}
+
 .login-page .login .submit {
 	padding: 1rem;
 	color: var(--white);
